--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -46,6 +46,7 @@
   "actions": "Actions",
   "dashboard": "Home",
   "logout": "Log out",
+  "profile": "Your profile",
   "resources": "Resources",
   "home": "Home",
   "search": "Search",
