--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -46,6 +46,7 @@
   "actions": "Acciones",
   "dashboard": "Inicio",
   "logout": "Cerrar sesión",
+  "profile": "Perfil",
   "resources": "Recursos",
   "home": "Inicio",
   "search": "Buscar",
