add change new template

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -168,5 +168,7 @@
   "due_date_by_days": "Due in Days",
   "due_date_days": "Due Date",
   "customer_code": "Customer Code",
-  "team": "Team"
+  "team": "Team",
+  "next": "Next",
+  "back": "Back"
 }
