--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -7,101 +7,101 @@
     "about": "Nosotros",
     "contact": "Contacto",
     "map": "Mapa",
-    "login": "Login"
+    "login": "Acceso"
   },
   "home": {
     "title": "Inicio",
     "heading": "Bienvenidos a Famindex",
-    "description": "Code & Fun"
+    "description": "Desarrollamos software a medida, impulsamos empresas con soluciones creativas y transformamos ideas en tecnología innovadora."
   },
   "about": {
     "title": "Sobre Nosotros",
-    "heading": "Pasión por los pequeños detalles",
-    "description": "Creamos experiencias únicas combinando cocina, ambiente y servicio para que cada visita sea especial.",
-    "title1": "Sabores que nos definen",
-    "txt1": "En La Meva Llar celebramos la esencia de la cocina mediterránea con recetas de toda la vida, elaboradas con productos frescos y locales.",
-    "title2": "Un lugar para compartir",
-    "txt2": "Nuestro espacio está pensado para reunir personas, celebrar momentos y saborear juntos cada plato."
+    "heading": "Tecnología hecha con pasión y creatividad",
+    "description": "Somos una empresa especializada en desarrollar software a medida, soluciones creativas e innovadoras, ofreciendo soporte a empresas para ayudarles a crecer con tecnología de vanguardia.",
+    "title1": "Soluciones tecnológicas personalizadas",
+    "txt1": "Desarrollamos software adaptado a las necesidades reales de tu negocio. No usamos plantillas: cada proyecto es único, funcional y elegante.",
+    "title2": "Soporte y acompañamiento continuo",
+    "txt2": "No solo creamos productos, acompañamos a tu empresa con soporte constante, evolutivos y mejoras que potencian tu crecimiento."
   },
   "contact": {
-    "title": "Ubicación y Horarios",
-    "address": "📍 Calle Buenos Aires, 12 – Barcelona",
-    "hours": "🕒 Lunes a Domingo: 9:00 - 23:00",
+    "title": "Contáctanos",
+    "address": "📍 Oficinas en Barcelona, servicio global remoto",
+    "hours": "🕒 Lunes a Viernes: 9:00 - 18:00",
     "phone": "📞 +34 600 123 456",
-    "note": "* Horarios especiales en festivos"
+    "note": "* También atendemos fuera de horario mediante soporte remoto para clientes"
   },
   "footer": {
     "solutions": "Soluciones",
     "solutions_list": {
-      "marketing": "Marketing",
-      "analytics": "Analítica",
-      "automation": "Automatización",
-      "commerce": "Comercio",
-      "insights": "Información"
+      "marketing": "Software para Marketing",
+      "analytics": "Plataformas Analíticas",
+      "automation": "Automatización de procesos",
+      "commerce": "Comercio Digital",
+      "insights": "Inteligencia de Negocio"
     },
     "support": "Soporte",
     "support_list": {
-      "submit_ticket": "Enviar ticket",
+      "submit_ticket": "Abrir ticket",
       "documentation": "Documentación",
-      "guides": "Guías"
+      "guides": "Guías prácticas"
     },
     "company": "Compañía",
     "company_list": {
       "about": "Sobre nosotros",
-      "blog": "Blog",
-      "jobs": "Trabajos",
+      "blog": "Blog de tecnología",
+      "jobs": "Trabaja con nosotros",
       "press": "Prensa"
     },
     "legal": "Legal",
     "legal_list": {
       "terms_of_service": "Términos de servicio",
       "privacy_policy": "Política de privacidad",
-      "license": "Licencia"
+      "license": "Licencia de uso"
     },
     "newsletter": {
       "title": "Suscríbete a nuestro boletín",
-      "description": "Las últimas noticias, artículos y recursos directamente a tu correo semanalmente.",
+      "description": "Recibe novedades tecnológicas, artículos sobre desarrollo de software y recursos útiles directamente en tu correo.",
       "placeholder": "Introduce tu correo electrónico",
       "button": "Suscribirse"
     },
-    "copyright": "Todos los derechos reservados."
+    "copyright": "Famindex © Todos los derechos reservados."
   },
   "map": {
-    "title": "Ubicación",
-    "heading": "Tu destino gastronómico",
-    "description": "Un lugar donde cada visita es especial."
+    "title": "Oficinas y Soporte",
+    "heading": "Tecnología accesible estés donde estés",
+    "description": "Oficinas físicas en Barcelona y soporte remoto internacional para empresas de cualquier sector."
   },
   "seo": {
     "home": {
-      "title": "La Meva Llar | Restaurante Mediterráneo",
-      "description": "La Meva Llar, bar restaurante con esencia mediterránea: desayunos, tapas, postres y platos caseros en un ambiente cálido y familiar.",
-      "keywords": "la meva llar, restaurante mediterráneo, tapas, desayunos, postres, comida casera, bar Buenos Aires, bar mediterráneo, barcelona, bar barcelona",
-      "ogTitle": "La Meva Llar | Restaurante Mediterráneo",
-      "ogDescription": "La Meva Llar, bar restaurante con esencia mediterránea: desayunos, tapas, postres y platos caseros en un ambiente cálido y familiar.",
+      "title": "Famindex | Software a medida y soluciones tecnológicas",
+      "description": "En Famindex creamos software a medida para empresas, soluciones tecnológicas eficientes, soporte técnico y plataformas digitales personalizadas.",
+      "keywords": "famindex, software a medida, desarrollo tecnológico, soluciones creativas, soporte empresas, software personalizado, plataformas digitales, desarrollo a medida, empresas tecnológicas",
+      "ogTitle": "Famindex | Software a medida y soluciones tecnológicas",
+      "ogDescription": "Software personalizado, soluciones creativas y soporte técnico con tecnología de vanguardia para tu empresa.",
       "ogType": "website"
     },
     "about": {
-      "title": "La Meva Llar | Sobre Nosotros",
-      "description": "Conoce La Meva Llar, restaurante con esencia mediterránea donde compartimos sabores auténticos, recetas caseras y un ambiente acogedor para disfrutar en compañía.",
-      "keywords": "la meva llar, sobre nosotros, quienes somos, restaurante mediterráneo, historia restaurante, cocina casera, tapas tradicionales, platos mediterráneos, ambiente familiar, esencia mediterránea, restaurante acogedor, gastronomía mediterránea, comida local, tradición y sabor",
-      "ogTitle": "La Meva Llar | Sobre Nosotros",
-      "ogDescription": "Conoce La Meva Llar, restaurante con esencia mediterránea donde compartimos sabores auténticos, recetas caseras y un ambiente acogedor para disfrutar en compañía.",
+      "title": "Famindex | Sobre Nosotros",
+      "description": "Conoce Famindex, empresa de desarrollo de software a medida, soporte técnico y soluciones digitales personalizadas para negocios modernos.",
+      "keywords": "famindex, sobre nosotros, desarrollo de software, soluciones digitales, soporte técnico, consultoría tecnológica, innovación tecnológica, software empresarial",
+      "ogTitle": "Famindex | Sobre Nosotros",
+      "ogDescription": "Somos una empresa de desarrollo de software a medida con un enfoque creativo y soporte continuo a empresas.",
       "ogType": "website"
     },
     "contact": {
-      "title": "La Meva Llar | Contacto y Reservas",
-      "description": "Contacta con La Meva Llar, bar restaurante mediterráneo. Reserva tu mesa, consulta disponibilidad o solicita información sobre nuestros menús y eventos especiales.",
-      "keywords": "la meva llar contacto, reservar mesa restaurante, teléfono restaurante mediterráneo, contactar restaurante, reserva online bar, restaurante con tapas, restaurante mediterráneo reservas, contactar bar restaurante, localización restaurante, horarios restaurante, restaurante familiar contacto",
-      "ogTitle": "La Meva Llar | Contacto y Reservas",
-      "ogDescription": "Contacta con La Meva Llar, bar restaurante mediterráneo. Reserva tu mesa, consulta disponibilidad o solicita información sobre nuestros menús y eventos especiales.",
+      "title": "Famindex | Contacto y Soporte",
+      "description": "Contacta con Famindex para desarrollar tu software a medida, soluciones digitales o soporte técnico especializado para tu empresa.",
+      "keywords": "famindex contacto, soporte técnico, desarrollo software a medida, contacto empresa tecnológica, consultoría tecnológica, servicios digitales, software para empresas",
+      "ogTitle": "Famindex | Contacto y Soporte",
+      "ogDescription": "Contáctanos para crear tu software a medida o recibir soporte técnico especializado para tu empresa.",
       "ogType": "website"
     },
     "map": {
-      "title": "La Meva Llar | Mapa y Localización",
-      "description": "Encuentra La Meva Llar, bar restaurante mediterráneo. Consulta nuestra ubicación exacta, cómo llegar y planifica tu visita para disfrutar de tapas, desayunos y platos caseros.",
-      "keywords": "la meva llar ubicación, cómo llegar restaurante, mapa restaurante mediterráneo, restaurante cerca de mí, restaurante familiar ubicación, restaurante con terraza dirección, La Meva Llar mapa, localización bar restaurante, dirección restaurante mediterráneo, restaurante Costa Brava, parking restaurante mediterráneo",
-      "ogTitle": "La Meva Llar | Mapa y Localización",
-      "ogDescription": "Encuentra La Meva Llar, bar restaurante mediterráneo. Consulta nuestra ubicación exacta, cómo llegar y planifica tu visita para disfrutar de tapas, desayunos y platos caseros.",
+      "title": "Famindex | Oficinas y Soporte Remoto",
+      "description": "Descubre dónde se encuentra Famindex, nuestras oficinas en Barcelona y nuestro alcance global con soporte remoto para empresas tecnológicas.",
+      "keywords": "famindex ubicación, soporte remoto, empresa tecnológica barcelona, desarrollo software barcelona, soporte global empresas, famindex oficina central, tecnología a distancia, soporte empresas digitales",
+      "ogTitle": "Famindex | Oficinas y Soporte Remoto",
+      "ogDescription": "Con oficinas en Barcelona y soporte remoto para cualquier empresa del mundo.",
       "ogType": "website"
     }
   }
